--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
+
+
+/*==============Renk Değişken Ayarları==============*/
 body.dark{
     --bg-color1:#1C1C1C;
     --bg-color2:#343434;
@@ -5,6 +10,15 @@ body.dark{
     --color2:#DDD;
 }
 
+body:not(.dark){
+    --bg-color1:#eaeae9;
+    --bg-color2:#fbfdff;
+    --color1:#3e4455;
+    --color2:#000;
+}
+
+
+/*==============CSS Kök Değişkenleri==============*/
 *,
 ::after,
 ::before{
@@ -13,10 +27,12 @@ body.dark{
     padding: 0;
 }
 
-html{
+html{ 
     scroll-behavior: smooth;
 }
 
+
+/*==============CSS Global==============*/
 a{
     text-decoration: none;
     outline: none;
@@ -62,6 +78,8 @@ body{
     font-family: 'Poppins',sans-serif;
 }
 
+
+/*==============Wrapper==============*/
 .portfolio-container{
     max-width: 1070;
     margin: 0 auto;
@@ -73,6 +91,8 @@ body{
     flex-wrap: wrap;
 }
 
+
+/*==============Header Navbar Stil==============*/
 header{
     left: 0px;
     right: 0px;
@@ -80,8 +100,7 @@ header{
     transition: .8s;
     padding: 15px;
     position: fixed;
-    background-color: var(--bg-color1);
-
+    background-color: var(--bg-color1); 
 }
 
 header .portfolio-row.header-wrap{
@@ -106,6 +125,8 @@ header .portfolio-row.header-wrap{
     color: var(--color1);
 }
 
+
+/*==============Navbar Mobil Görünüm==============*/
 .portfolio-navbar.show{
     display: block;
     position:absolute;
@@ -128,10 +149,123 @@ header .portfolio-row.header-wrap{
     font-size: 0.9rem;
     font-weight: 300;
     line-height: 45px;
-
 }
 
 
+/*==============Hakkında Kısmı Stil==============*/
+#about{
+    padding-top: 100px;
+    background-color: var(--bg-color1);
+}
+
+.about-content{
+    align-items: center;
+}
+
+.about-intro{
+    margin-top: 3rem;
+    width: 100%;
+    order: 2;
+}
+
+
+/*==============Altbaşlık Bölümü==============*/
+.subtitle{
+    position: relative;
+    color: #f987d6;
+    font-weight: 800;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    padding-left: 55px;
+}
+
+.subtitle::before{
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 0px;
+    width: 35px;
+    height: 3px;
+    background-image: linear-gradient(to right, #977ec7 0%, #f987d6 100%);
+}
+
+h1 strong, 
+h2 strong{
+    background-image: linear-gradiennt(to right, #977ec7 0%, #f987d6 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+.about-text{
+    color: var(--color2);
+}
+
+
+/*==============Hello Button=============*/
+.hello-btn a{
+    display: inline-block;
+    margin: 20px 0;
+    padding: 15px 45px;
+    color: #fff;
+    background-color: #977ec7;
+    z-index: 1001;
+    line-height: 30px;
+    border-radius: 15px;
+    transition: all 0.3s ease-out 0s;
+}
+
+.hello-btn:hover{
+    background-color: #293b5f;
+}
+
+
+/*==============Hakkında Kısmı Resim Stil=============*/
+.about-image{
+    width: 100%;
+    order: 1;
+    position: relative;
+    z-index: 2;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.about-image img{
+    border-radius: 100% 50% 50% 100% / 75% 69% 69% 75%;
+}
+
+.about-image::before{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-image: linear-gradient(11deg, #291342 0%, #c60242 100%);
+    z-index: -1;
+    border-radius: 100% 50% 50% 100% / 75% 69% 69% 75%;
+    box-shadow: 2px 10px 0px 0px  rgba(216,19,19,0.16);
+    transition: all .5s ease-in-out;
+}
+
+.about-image:hover{
+    transform: translateY(-10.5px);
+    filter:drop-shadow(0 0 30px rgba(223, 53, 13, 0.8));
+}
+
+/*==============Ana Başlık==============*/
+h1 strong, h2 strong{
+    background-image: linear-gradiennt(to right, #977ec7 0%, #f987d6 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-animation-clip: text;
+    background-clip: text;
+}
+
+.about-text h3{
+    color:var(--color1);
+    margin-bottom: 10px;
+}
+
+/*==============Orta Boyuttaki Ekranlar (768 px ve fazlası)==============*/
 @media (min-width: 768px){
     h1{
         font-size: 4rem;
@@ -143,12 +277,15 @@ header .portfolio-row.header-wrap{
         font-weight: 600;
     }
 
+
+/*==============Header Responsive==============*/
     header{
         position: absolute;
         padding: 0px 15px;
+        background-color: transparent;
     }
 
-    navbar-toggle i{
+    .navbar-toggle i{
         display: none;
     }
 
@@ -165,4 +302,31 @@ header .portfolio-row.header-wrap{
         color: var(--color1);
         line-height: 65px;
     }
+
+
+    /*==============Hakkında Bölümü Responsive==============*/
+    #about{
+        padding: 175px 0 150px 0;
+    }
+    
+    .about-intro{
+        width: 60%;
+        margin-top: 0;
+        order: 1;
+    }
+
+    .about-intro p{
+        padding-right: 16%;
+
+    }
+
+
+    /*==============Slider Resim Responsive==============*/
+    .about-image{
+        width: 40%;
+        order: 2;
+    }
+
+
 }
+
