--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,114 @@ h1 strong, h2 strong{
 }
 
 
+/*==============İletişim Bölümü Stil==============*/
+#iletisim {
+    padding: 60px 0;
+    background-color: var(--bg-color1);
+    position: relative;
+    z-index: 2;
+}
+
+.iletisim-bilgi{
+    width: 100%;
+    padding-top: 15px;
+}
+
+.iletisim-bilgi li{
+    display: flex;
+    flex-wrap: wrap;
+    background-color:#FFF;
+    border-radius: 0.5rem;
+    margin-bottom: 28px;
+    padding: 30px 40px;
+    position: relative;
+    cursor: pointer; 
+    border: 1px solid #e2e5f1;
+    box-shadow: 0 0.25rem 0.75rem rgba(11, 15, 25, 0.1), 0 0.125 0.4rem rgba(11, 15, 25, 0.5);
+}
+
+.iletisim-icon{
+    margin: auto 0;
+}
+
+.iletisim-icon i{
+    color: #3e4455;
+    font-size: 24px;
+    display: inline-block;
+    margin-right: 30px;
+    position: relative;
+}
+
+.iletisim-detay h5{
+    color: #3e4455;
+    font-size: 1rem;
+}
+
+.iletisim-bilgi li::after{
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    z-index: -1;
+    transition: all 0.15s ease-out 0s;
+    background-image: linear-gradient(to right, #e74c3c  0%, #f39c12 100%);
+}
+
+.iletisim-bilgi li:hover::after{
+    top: 8px;
+    left: 8px;
+}
+
+.iletisim-heading{
+    margin-top: 30px;
+}
+
+.footer-iletisim{
+    width: 100%;
+    padding-top: 15px;
+}
+
+.input-wrapper, .input-konu, .input-aciklama, .form-submit{
+    width: 100%;
+    padding: 10px 0;
+}
+
+.input-control, .iletisim-msj{
+    font-family: 'Poppins' sans-serif;
+    font-size: 1rem;
+    background-color: #f6f6f9;
+    border: 1px solid #f6f6f9;
+    color: #3e4455;
+    height: 60px;
+    line-height: 56px;
+    outline: none;
+    padding: 0 30px;
+    width: 100%;
+    font-weight: 500;
+}
+
+.iletisim-msj{
+    height: 150px;
+    line-height: 1.2;
+    padding: 20px 30px;
+    resize: none;
+}
+
+.btn-submit{
+    width: 100%;
+    padding: 15px 30px;
+    color: #FFF;
+    font-family: 'Poppins' sans-serif;
+    background-color: #ff5252;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+}
+
+
 /*==============Orta Boyuttaki Ekranlar (768 px ve fazlası)==============*/
 @media (min-width: 768px){
     h1{
@@ -606,5 +714,29 @@ header.header-sticky{
     }
 
     
+/*==============İletişim Responsive==============*/
+    .iletisim-bilgi{
+        width: 35%;
+        padding-top: 15px;
+    }
+
+    .iletisim-heading{
+        display: none;
+    }
+
+    .footer-iletisim{
+        width: 65%;
+        padding-left: 40px;
+    }
+
+    .input-wrapper{
+        padding: 0 10px;
+        width: 50%;
+        margin-bottom: 10px;
+    }
+
+    .input-konu, .form-submit{
+        padding: 10px;
+    }
 }
 
