--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
 *{
-    font-family: 'Poppins' sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans serif;
 }
 
-.body{
-    background-image: url("images/sau.jpg");
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url("/images/sau.jpg") no-repeat;
     background-size: cover;
+    background-position: center;
+}
+
+.box{
+    width: 420px;
+    background: transparent;
+    color: #FFf;
+    border-radius: 10px;
+    padding: 30px 40px; 
+    border: 2px solid rgba(0, 0, 0, 0.2); 
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+}
+
+.box h1{
+    font-size: 36px;
+    text-align: center;
+    color: black;
+}
+
+.box .input-field{
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+    position: relative;
+}
+
+.input-field .loginInput{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px; 
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
+
+.input-field .loginInput::placeholder{
+    color:#fff;
+}
+
+.input-field i{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.box .loginSubmit{
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, .2);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+
 }
